load("//tools:defaults.bzl", "ng_module")
load("//tools/highlight-files:index.bzl", "highlight_files")

package(default_visibility = ["//visibility:public"])

ALL_EXAMPLES = [
    # TODO(devversion): try to have for each entry-point a bazel package so that
    # we can automate this using the "package.bzl" variables. Currently generated
    # with "bazel query 'kind("ng_module", //src/components-examples/...:*)' --output="label"
    "//src/components-examples/angular/accordion",
    "//src/components-examples/angular/autocomplete",
    "//src/components-examples/angular/badge",
    "//src/components-examples/angular/breadcrumb",
    "//src/components-examples/angular/button",
    "//src/components-examples/angular/captcha",
    "//src/components-examples/angular/checkbox",
    "//src/components-examples/angular/checkbox-panel",
    "//src/components-examples/angular/chips",
    "//src/components-examples/angular/datepicker",
    "//src/components-examples/angular/dialog",
    "//src/components-examples/angular/file-selector",
    "//src/components-examples/angular/form-field",
    "//src/components-examples/angular/icon",
    "//src/components-examples/angular/lightbox",
    "//src/components-examples/angular/loading",
    "//src/components-examples/angular/menu",
    "//src/components-examples/angular/pagination",
    "//src/components-examples/angular/processflow",
    "//src/components-examples/angular/radio-button",
    "//src/components-examples/angular/radio-button-panel",
    "//src/components-examples/angular/search",
    "//src/components-examples/angular/select",
    "//src/components-examples/angular/sidebar",
    "//src/components-examples/angular/status",
    "//src/components-examples/angular/tabs",
    "//src/components-examples/angular/tag",
    "//src/components-examples/angular/textarea",
    "//src/components-examples/angular/textexpand",
    "//src/components-examples/angular/time-input",
    "//src/components-examples/angular-maps/esri-basemap-gallery",
    "//src/components-examples/angular-maps/esri-layer-list",
    "//src/components-examples/angular-maps/esri-legend",
    "//src/components-examples/angular-maps/esri-web-map",
    "//src/components-examples/angular-maps/esri-web-scene",
]

ng_module(
    name = "components-examples",
    srcs = glob(["*.ts"]) + [":example-module.ts"],
    module_name = "@sbb-esta/components-examples",
    deps = ALL_EXAMPLES,
)

filegroup(
    name = "example-source-files",
    srcs = ["%s:source-files" % pkg for pkg in ALL_EXAMPLES],
)

highlight_files(
    name = "examples-highlighted",
    srcs = [":example-source-files"],
)

genrule(
    name = "example-module",
    srcs = [":example-source-files"],
    outs = [
        "example-module.ts",
        "_example_module.MF",
    ],
    cmd = """
      # Create source file manifest
      echo "$(execpaths //src/components-examples:example-source-files)" \
          > $(execpath _example_module.MF)

      # Run the bazel entry-point for generating the example module.
      ./$(execpath //tools/example-module:bazel-bin) \
          "$(execpath _example_module.MF)" \
          "$(execpath example-module.ts)" \
          "$$PWD/src/components-examples"
    """,
    output_to_bindir = True,
    tools = ["//tools/example-module:bazel-bin"],
)
