load(
    "//src/examples:config.bzl",
    "EXAMPLES_ENTRYPOINTS",
    "EXAMPLES_MARKDOWN_TARGETS",
    "EXAMPLES_TARGETS",
    "EXAMPLES_TESTING_TARGETS",
)
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_package",
)

package(default_visibility = ["//visibility:public"])

# Root "@sbb-esta/examples" entry-point.
ng_module(
    name = "examples",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@sbb-esta/examples",
    deps = ["//src/examples/%s" % p for p in EXAMPLES_ENTRYPOINTS] + [
        "//src/angular-public/button",
        "//src/angular/loading",
        "@npm//@angular/common",
        "@npm//@angular/core",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = glob(["*.md"]),
)

filegroup(
    name = "overviews",
    srcs = [":overview"] + ["//src/examples/%s:overview" % name for name in EXAMPLES_MARKDOWN_TARGETS],
)

# Creates the @sbb-esta/examples package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":public-api.ts",
    entry_point_name = "examples",
    tags = ["release-package"],
    deps = EXAMPLES_TARGETS + EXAMPLES_TESTING_TARGETS,
)
