load(
    "//src/journey-maps:config.bzl",
    "JOURNEY_MAPS_ENTRYPOINTS",
    "JOURNEY_MAPS_MARKDOWN_TARGETS",
    "JOURNEY_MAPS_TARGETS",
    "JOURNEY_MAPS_TESTING_TARGETS",
)
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_package",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_binary",
    "sass_library"
)

package(default_visibility = ["//visibility:public"])

sass_library(
    name = "src_style_functions_scss",
    srcs = [
        "src/style/_colors.scss",
        "src/style/_functions.scss",
    ],
    deps = [
        "//src/angular/styles:common_scss_lib",
    ],
)

sass_binary(
    name = "src_journey_maps_client_component_scss",
    src = "src/journey-maps-client.component.scss",
)

sass_binary(
    name = "src_components_zoom_controls_zoom-controls_component_scss",
    src = "src/components/zoom-controls/zoom-controls.component.scss",
    deps = ["src_style_functions_scss"],
)

# Root "@sbb-esta/journey-maps" entry-point.
ng_module(
    name = "journey-maps",
    srcs = glob(
        [
            "*.ts",
            "src/**/*.ts",
        ],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [":src/journey-maps-client.component.css"] + [":src/components/zoom-controls/zoom-controls.component.css"] + glob(["**/*.html"]),
    deps = ["//src/journey-maps/%s" % p for p in JOURNEY_MAPS_ENTRYPOINTS] + [
        "@npm//@angular/animations",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@types/geojson",
        "@npm//angular-resize-event",
        "@npm//maplibre-gl",
        "@npm//rxjs",
    ],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["src/**/*.spec.ts"],
        exclude = ["src/**/*.e2e.spec.ts"],
    ),
    deps = [
        ":journey-maps",
        "@npm//@angular/common",
        "@npm//@angular/platform-browser",
        "@npm//maplibre-gl",
        "@npm//rxjs",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = glob(["*.md"]),
)

filegroup(
    name = "overviews",
    srcs = [":overview"] + ["//src/journey-maps/%s:overview" % name for name in JOURNEY_MAPS_MARKDOWN_TARGETS],
)

# Creates the @sbb-esta/journey-maps package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    tags = ["release-package"],
    deps = JOURNEY_MAPS_TARGETS + JOURNEY_MAPS_TESTING_TARGETS,
)
