package(default_visibility = ["//visibility:public"])


load(
    "//src/keycloak:config.bzl",
    "KEYCLOAK_ENTRYPOINTS",
    "KEYCLOAK_TARGETS",
    "KEYCLOAK_MARKDOWN_TARGETS",
    "KEYCLOAK_TESTING_TARGETS",
)
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_package",
    "ts_library"
)

# Root "@sbb-esta/angular-keycloak" entry-point.
ng_module(
    name = "keycloak",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@sbb-esta/angular-keycloak",
    deps = ["//src/keycloak/%s" % p for p in KEYCLOAK_ENTRYPOINTS],
)

markdown_to_html(
    name = "overview",
    srcs = [
        ":README.md",
    ],
)

filegroup(
    name = "overviews",
    srcs = [":overview"] + ["//src/keycloak/%s:overview" % name for name in KEYCLOAK_MARKDOWN_TARGETS],
)

# Creates the @sbb-esta/angular-keycloak package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":public-api.ts",
    entry_point_name = "keycloak",
    tags = ["release-package"],
    deps = KEYCLOAK_TARGETS + KEYCLOAK_TESTING_TARGETS,
)
