package(default_visibility = ["//visibility:public"])


load(
    "//src/maps:config.bzl",
    "MAPS_ENTRYPOINTS",
    "MAPS_TARGETS",
    "MAPS_MARKDOWN_TARGETS",
    "MAPS_TESTING_TARGETS",
)
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_package",
    "ts_library"
)

# Root "@sbb-esta/angular-maps" entry-point.
ng_module(
    name = "maps",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@sbb-esta/angular-maps",
    deps = ["//src/maps/%s" % p for p in MAPS_ENTRYPOINTS],
)

markdown_to_html(
    name = "overview",
    srcs = [
        ":accessing-map-data.md",
        ":getting-started.md",
        ":layer-filtering.md",
        ":loading-arcgis-types.md",
        ":mapping-basics.md",
        ":overview-and-usage.md",
    ],
)

filegroup(
    name = "overviews",
    srcs = [":overview"] + ["//src/maps/%s:overview" % name for name in MAPS_MARKDOWN_TARGETS],
)

# Creates the @sbb-esta/angular-maps package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":public-api.ts",
    entry_point_name = "maps",
    tags = ["release-package"],
    deps = MAPS_TARGETS + MAPS_TESTING_TARGETS,
)
